Add job fair search option

--- a/app/views/users/pending_index.html.erb
+++ b/app/views/users/pending_index.html.erb
@@ -1,7 +1,8 @@
 <% @users.each do |user| %>
 <div class="result">
   <br>
-  <label>Name:</label> <%= user.school %><br>
+  <label>School:</label> <%= user.school %><br>
+  <label>Name:</label> <%= user.prefix %> <%= user.first_name %> <%= user.last_name %><br>
   <label>Email: </label> <%= user.email %><br>
   <label>Status:</label> <%= user.access %><br>
   <%= button_to "Activate", "/users/#{user.id}/activate", method: :put, class: "btn btn-info" %><br>
