--- a/app/views/users/_teacher_form.html.erb
+++ b/app/views/users/_teacher_form.html.erb
@@ -226,11 +226,11 @@
 
   <% if @user.id == nil %>
     <div class="actions">
-      <%= f.submit 'Register', :name => 'register', :class => "btn btn-info" %>
+      <%= f.submit 'Register', :name => 'submit', :class => "btn btn-info" %>
     </div>
   <% else %>
     <div class="actions">
-      <%= f.submit 'Update Information', :name => 'register', :class => "btn btn-info" %>
+      <%= f.submit 'Update Information', :name => 'submit', :class => "btn btn-info" %>
     </div>
   <% end %>
    <br>
