--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,3 +10,8 @@
 </div>
 <% end %>
 
+<% if User.find(session[:user_id]).access == "admin" %>
+  <%= form_tag(users_search_path(params.merge(format: 'csv'))) do %>
+  <%= submit_tag 'Export to CSV', class: "btn btn-info"%>
+  <% end %>
+<% end %>
