Replace collection box with resume bank

--- a/app/views/user_mailer/school_activated_email.text.erb
+++ b/app/views/user_mailer/school_activated_email.text.erb
@@ -1,6 +1,6 @@
 Dear <%= @user.first_name %> <%= @user.last_name %>
 
-Your registration has been approved, and you can now access INCS’s Online Resume Collection Box here: https://incsresumebank.herokuapp.com/sessions/new.
+Your registration has been approved, and you can now access INCS’s Online Resume Bank here: https://incsresumebank.herokuapp.com/sessions/new.
 
 With your account, you can search for candidates that meet your team needs, browse through their registration summaries, and download the resumes that you select. In an effort to provide you with the most current database, all resumes will be de-activated after 30 days of submission, unless a candidate selects to re-activate his/her account.
 
