--- a/app/views/user_mailer/teacher_email.text.erb
+++ b/app/views/user_mailer/teacher_email.text.erb
@@ -1,8 +1,8 @@
 Dear <%= @user.first_name %>,
 
-Thank you for using INCS’s Online Resume Collection Box. Your information has been received.
+Thank you for using INCS’s Online Resume Bank. Your information has been received.
 
-If you selected to add your resume to the online collection box, registered school leaders approved by INCS will now be able to access your information. If you selected to register for the 2016 Teacher Job Fair and not be added to the toolbox, rest assured that your resume remains private.
+If you selected to add your resume to the online Bank, registered school leaders approved by INCS will now be able to access your information. If you selected to register for the 2016 Teacher Job Fair and not be added to the toolbox, rest assured that your resume remains private.
 
 Please keep your username and password for your records. You can log into your account at any time to:
 - Register for Teacher Job Fair on Saturday, March 5th (more info here: https://www.incschools.org/events/teacher-job-fair/
