--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div class="centered">
-<h1 class="main-header">Welcome to the INCS Online Resume Collection Box</h1>
+<h1 class="main-header">Welcome to the INCS Online Resume Bank</h1>
 
   <% if session[:user_id] != nil && User.find(session[:user_id]).access == 'pending' %>
     <p>Thank you for your registration. Please allow up to 2 business days for INCS staff to process approval of your account. You have received an email with further information.</p>
