--- a/app/views/user_mailer/teacher_email.html.erb
+++ b/app/views/user_mailer/teacher_email.html.erb
@@ -6,7 +6,7 @@
   <body>
     <p>Dear <%= @user.first_name %>,</p>
     <p>
-      Thank you for using INCS’s Online Resume Collection Box. Your information has been received.<br>
+      Thank you for using INCS’s Online Resume Bank. Your information has been received.<br>
     </p>
     <p>
       Please keep your username and password for your records. You can log into your account at any time to:
