--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -66,6 +66,7 @@
 <label>Highest Degree:</label> <%= @user.degree %><br>
 <label>College Major:</label> <%= @user.major %><br>
 <label>Years of Experience:</label> <%= @user.years %><br>
+<label>Locaiton Preference:</label> <%= @user.location_pref%> <br>
 <label>Willing to Relocate:</label> <% if @user.relocation %>Yes<%else%>No<%end%><br>
 <label>Previous Organizations:</label> <%= @user.organizations.map{|org| org.name }.join(", ") %><br>
 <label>Additional Information:</label> <div class="additional-info"><p><%= @user.additional %></p></div><br>
