Add 'any' options for grade pref and years exp in search

--- a/app/views/users/show_school.html.erb
+++ b/app/views/users/show_school.html.erb
@@ -16,7 +16,7 @@
 
   <div class="field">
     <em><%= label_tag(:name, "What grade level are you hiring for?") %></em>
-    <%= select_tag :grade_pref, options_for_select(grades), class: 'form-control' %>
+    <%= select_tag :grade_pref, options_for_select(grades_search), class: 'form-control' %>
   </div><br>
 
   <div class="field">
