--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,11 +31,14 @@
         <li role="presentation"><%=link_to "Log In", new_session_path %></li>
       <% end %>
     </ul>
+    <div class="banner"><a href="https://www.incschools.org/events/tjf/">
+      <%= image_tag("banner.png", width:"100%") %>
+      </a>
+    </div>
     </nav>
-  <div class="container" style="padding-top:20px;">
+  <div class="container" style="padding-top:80px;">
     <%= yield %>
   </div>
-  <p class="disclaimer">This activity or event is not sponsored by, associated with, or endorsed by the UNO Charter School Network, Inc., or its affiliates</p>
   <footer class="footer"><div class="prim-1"></div><div class="prim-2"></div><div class="prim-3"></div><div class="prim-4"></div></footer>
 </body>
 
