--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,4 +14,64 @@
     </div>
   <% end %>
 
+  <h2 class="topic">
+  <br>
+  2016 INCS Teacher Job Fair
+  </h2>
+
+  <p class="main-content">The Illinois Network of Charter Schools (INCS) will host our 11th annual Teacher Job Fair on Saturday, March 5, 2016 at UNO Charter School Network (UCSN) Veterans Memorial Campus. Representatives from the state’s charter schools will be on hand to recruit hundreds of teachers, social workers, counselors, nurses, and other administrators. INCS seeks highly qualified candidates who are excited to work in a mission-drive environment and to TEACH, LEAD, and SUCCEED.</p>
+
+  <p class="main-content">
+    Teachers have the opportunity to:
+    <ul class="main-content-list">
+      <li>Meet recruiters from over 50 public charter schools representing over 120 campuses</li>
+      <li>Post your resume in the INCS Online Resume Bank, where charter schools look for candidates for various positions year-round</li>
+      <li>Interview on-site with schools looking to hire great teachers like you</li>
+    </ul>
+  </p>
+
+    <p class="main-content">
+    Schools have the opportunity to:
+    <ul class="main-content-list">
+      <li>Meet with hundreds of educators</li>
+      <li>View candidates’ resumes and credentials ahead of time using the INCS Online Resume Bank</li>
+      <li>Invite candidates for on-site interviews following the meet and greet portion of the event</li>
+    </ul>
+  </p>
+
+  <h3>Agenda</h3>
+  <p class="main-content">
+    <ul class="main-content-list">
+      <li>8:00 am - 9:00 am, School table set-up</li>
+      <li>8:30 am, Candidate registration begins</li>
+      <li>9:00 am - 12:30 pm, Meet and Greet with Candidates & Schools</li>
+      <li>1:00 pm - 3:00 pm, On-site teacher interviews (by invitation only)</li>
+    </ul>
+  </p>
+
+  <h3>Location</h3>
+  <p class="main-content">
+  UNO Charter School Network (UCSN*) Veterans Memorial Campus. 4248 W. 47th St., Chicago, IL 60632
+    <ul class="main-content-list">
+      <li>There will be street parking available</li>
+      <li>The school is also accessible by public transportation. It is approximately one mile northwest of the Pulaski Orange Line stop</li>
+    </ul>
+  </p>
+    <%= button_to "Register to attend now!", "https://www.eventbrite.com/e/teacher-job-fair-tickets-19644359809", method: :get, class: "btn btn-info btn-centered" %>
+
+  <p class="main-content"><br>Click <a href="https://www.facebook.com/media/set/?set=a.10152791985156379.1073741839.91629716378&type=1">here</a> to view photos of our 2015 INCS Teacher Job Fair, where recruiters from <em>over 120 Illinois charter public school campuses met with</em> highly-qualified applicants for more than <em>500</em> teaching, school leadership, social work, school nurse and administrative positions.
+  </p>
+
+  <p class="main-content">
+    ATTENTION teacher preparation programs and schools of education: We are always looking for more recruitment partners that can support our outreach to teachers. Please consider sharing our site with highly qualified candidates.
+  </p>
+
+  <p class="main-content">
+    If you have any questions or would like to receive a 2016 Teacher Job Fair flyer, please contact Stephanie Arias, INCS Charter Support Manager, at <%=mail_to("SArias@incschools.org")%>
+  </p>
+
+  <p class="disclaimer">
+    *This activity or event is not sponsored by, associated with, or endorsed by the UNO Charter School Network Inc., or its affiliates.
+  </p>
+
 </div>
