Fix problems from Steph

--- a/app/views/users/_teacher_form.html.erb
+++ b/app/views/users/_teacher_form.html.erb
@@ -198,7 +198,7 @@
 
   <div class="field field3">
     <br>
-    <em><%= f.label(:location_pref, "Where would you be willing to teach?") %></em><br>
+    <em><%= f.label(:location_pref, "Where are you willing to teach?") %></em><br>
     <%= f.radio_button(:location_pref, "Chicago") %>
     <%= f.label(:name, "Chicago") %><br>
     <%= f.radio_button(:location_pref, "Non-Chicago, Greater Illinois") %>
@@ -206,15 +206,6 @@
     <%= f.radio_button(:location_pref, "Chicago or Greater Illinois") %>
     <%= f.label(:name, "Both") %><br>
   </div>
-
-  <div class="field">
-    <br>
-    <em><%= f.label(:relocation, "Are you open to relocation?") %></em><br>
-    <%= f.radio_button(:relocation, true) %>
-    <%= f.label(:relocation, "Yes") %><br>
-    <%= f.radio_button(:relocation, false) %>
-    <%= f.label(:relocation, "No") %><br>
-  </div><br>
 
   <div class="field">
     <label><em>Membership or Alumni Organization (Check all that apply)</em></label><br>
