--- a/app/views/users/show_school.html.erb
+++ b/app/views/users/show_school.html.erb
@@ -30,9 +30,9 @@
   <div class="field">
     <em><%= label_tag(:location_pref, "Filter candidates by their location preference by choosing an option below") %></em><br>
     <%= radio_button_tag(:location_pref, "Chicago") %>
-    <%= label_tag(:name, "Only Chicago") %><br>
+    <%= label_tag(:name, "Open to positions in Chicago only") %><br>
     <%= radio_button_tag(:location_pref, "Non-Chicago, Greater Illinois") %>
-    <%= label_tag(:name, "Open to Non-Chicago, Greater Illinois Positions") %><br>
+    <%= label_tag(:name, "Open to non-Chicago, Greater Illinois positions") %><br>
     <%= radio_button_tag(:location_pref, "Chicago or Greater Illinois") %>
     <%= label_tag(:name, "Open to both options") %><br>
   </div><br>
