--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -39,7 +39,7 @@
     </ul>
   </p>
 
-  <h3>Agenda</h3>
+  <p class="main-content">Agenda</p>
   <p class="main-content">
     <ul class="main-content-list">
       <li>8:00 am - 9:00 am, School table set-up</li>
@@ -49,7 +49,7 @@
     </ul>
   </p>
 
-  <h3>Location</h3>
+  <p class="main-content">Location</p>
   <p class="main-content">
   UNO Charter School Network (UCSN*) Veterans Memorial Campus. 4248 W. 47th St., Chicago, IL 60632
     <ul class="main-content-list">
