Add forgot password functionality

--- a/app/views/user_mailer/forgot_password.html.erb
+++ b/app/views/user_mailer/forgot_password.html.erb
@@ -4,12 +4,12 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>The password associated with the email address <%= @user.email %> has been reset.</h1>
+    <h3>The password associated with this email address has been reset.</h3>
     <p>
-      Your temporary password is <%= @new_pass %><br>
+      Your temporary password is <%= @pass %><br>
     </p>
     <p>
-      To login and reset your password, just follow this link: <%= @url %>.
+      To reset your password and login, please follow this link: <%= @url %>.
     </p>
   </body>
 </html>
