--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,9 @@
 <div class="centered">
+<% if !flash[:notice].blank? %>
+  <div class="alert alert-info">
+    <%= flash[:notice] %>
+  </div>
+<% end %>
 <h1 class="main-header">Welcome to the INCS Online Resume Bank</h1>
 
   <% if session[:user_id] != nil && User.find(session[:user_id]).access == 'pending' %>
