--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,10 +12,10 @@
 
   <% if session[:user_id] == nil %>
     <div class="main-container">
-      <%= button_to "Teacher Registration", users_new_teacher_path, method: :get, class: "btn btn-info main-btn"%>
+      <%= button_to "Candidate Resume Bank & Fair Registration", users_new_teacher_path, method: :get, class: "btn btn-info main-btn"%>
     </div>
     <div class="main-container">
-      <%= button_to "School Registration", users_new_school_path, method: :get, class: "btn btn-info main-btn"%>
+      <%= button_to "School Resume Bank Registration", users_new_school_path, method: :get, class: "btn btn-info main-btn"%>
     </div>
   <% end %>
 
@@ -27,7 +27,7 @@
   <p class="main-content">The Illinois Network of Charter Schools (INCS) will host our 11th annual Teacher Job Fair on Saturday, March 5, 2016 at UNO Charter School Network (UCSN) Veterans Memorial Campus. Representatives from the state’s charter schools will be on hand to recruit hundreds of teachers, social workers, counselors, nurses, and other administrators. INCS seeks highly qualified candidates who are excited to work in a mission-drive environment and to TEACH, LEAD, and SUCCEED.</p>
 
   <p class="main-content">
-    Teachers have the opportunity to:
+    <strong>Teachers have the opportunity to:</strong>
     <ul class="main-content-list">
       <li>Meet recruiters from over 50 public charter schools representing over 120 campuses</li>
       <li>Post your resume in the INCS Online Resume Bank, where charter schools look for candidates for various positions year-round</li>
@@ -36,7 +36,7 @@
   </p>
 
     <p class="main-content">
-    Schools have the opportunity to:
+    <strong>Schools have the opportunity to:</strong>
     <ul class="main-content-list">
       <li>Meet with hundreds of educators</li>
       <li>View candidates’ resumes and credentials ahead of time using the INCS Online Resume Bank</li>
@@ -44,17 +44,17 @@
     </ul>
   </p>
 
-  <p class="main-content">Agenda</p>
+  <p class="main-content"><strong>Agenda</strong></p>
   <p class="main-content">
     <ul class="main-content-list">
       <li>8:00 am - 9:00 am, School table set-up</li>
       <li>8:30 am, Candidate registration begins</li>
-      <li>9:00 am - 12:30 pm, Meet and Greet with Candidates & Schools</li>
+      <li>9:00 am - 12:30 pm, Meet and greet with candidates & schools</li>
       <li>1:00 pm - 3:00 pm, On-site teacher interviews (by invitation only)</li>
     </ul>
   </p>
 
-  <p class="main-content">Location</p>
+  <p class="main-content"><strong>Location</strong></p>
   <p class="main-content">
   UNO Charter School Network (UCSN*) Veterans Memorial Campus. 4248 W. 47th St., Chicago, IL 60632
     <ul class="main-content-list">
@@ -62,7 +62,7 @@
       <li>The school is also accessible by public transportation. It is approximately one mile northwest of the Pulaski Orange Line stop</li>
     </ul>
   </p>
-    <%= button_to "Register to attend now!", "https://www.eventbrite.com/e/teacher-job-fair-tickets-19644359809", method: :get, class: "btn btn-info btn-centered" %>
+    <%= button_to "Schools: Register Here Today!", "https://www.eventbrite.com/e/teacher-job-fair-tickets-19644359809", method: :get, class: "btn btn-info btn-centered" %>
 
   <p class="main-content"><br>Click <a href="https://www.facebook.com/media/set/?set=a.10152791985156379.1073741839.91629716378&type=1">here</a> to view photos of our 2015 INCS Teacher Job Fair, where recruiters from <em>over 120 Illinois charter public school campuses met with</em> highly-qualified applicants for more than <em>500</em> teaching, school leadership, social work, school nurse and administrative positions.
   </p>
