Updates to teacher form page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -40,6 +40,16 @@ body {
   bottom:20px;
 }
 
+.label-up {
+  position: relative;
+  bottom:20px;
+}
+
+.label-up2 {
+  position: relative;
+  bottom:40px;
+}
+
 .nav-pills > li > a {
     background-color:#07adba;
     color:#f2f2f2;
