Fix spacing, change positions to gridview, fix typos

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -121,6 +121,12 @@ body > div > table > thead > tr > th{
   width: 25%;
 }
 
+.checkbox-grid2 li {
+  display: block;
+  float: left;
+  width: 50%;
+}
+
 .field2 {
   display: block;
   float: left;
@@ -157,7 +163,7 @@ body > div > table > thead > tr > th{
 }
 
 .teacher-label2 {
-  width: 20%;
+  width: 22%;
 }
 
 .centered {
