Fix links in emails

--- a/app/views/user_mailer/teacher_email.text.erb
+++ b/app/views/user_mailer/teacher_email.text.erb
@@ -9,7 +9,7 @@ Please keep your username and password for your records. You can log into your a
 - Update or delete your resume
 - Change your profile
 
- In an effort to keep the most current database possible, please note that all resumes will be de-activated after 30 days of submission. To re-activate, simply log back in at https://incsresumebank.herokuapp.com/sessions/new and select the Activate button next to your resume.
+ In an effort to keep the most current database possible, please note that all resumes will be de-activated after 30 days of submission. To re-activate, simply log back in at http://www.teacherjobfair.org/sessions/new and select the Activate button next to your resume.
 
  If you need any assistance using our database, please do not hesitate to contact me at the information below.  
 
