--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -119,7 +119,7 @@ body > div > table > thead > tr > th {
 .checkbox-grid li {
   display: block;
   float: left;
-  width: 25%;
+  width: 33%;
 }
 
 .checkbox-grid2 li {
@@ -142,6 +142,14 @@ body > div > table > thead > tr > th {
 
 .field4 {
   margin-top: 50px;
+}
+
+.field5 {
+  margin-top: 240px;
+}
+
+.field6 {
+  margin-top: 140px;
 }
 
 .form-control {
